# zero2prod-axum

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230222181553_seed_user.sql  20230307164812_relax_null_checks_on_idempotency.sql  20230307181527_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  error_handling.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  password.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: expiry.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  post.rs
templates/: login.html  subscriptions.html
templates/admin/: dashboard.html  newsletter.html  password.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
