[package]
name = "zero2prod-axum"
authors = ["Timothy Brackett <brackett.tc@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-server = "0.4"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }