[package]
name = "zero2prod-axum"
authors = ["Timothy Brackett <brackett.tc@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = { version = "0.6", features = ["tower-log"] }
axum-server = "0.4"
axum-tracing-opentelemetry = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
#tracing-error = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "0.3", features = ["trace"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claims = "0.7"
fake = "2.4"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls-native-roots"] }
quickcheck = "1"
quickcheck_macros = "1"