[package]
name = "zero2prod-axum"
authors = ["Timothy Brackett <brackett.tc@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1"
argon2 = { version ="0.4", features = ["std", "password-hash"] }
askama = "0.11"
async-redis-session = "0.2.2"
axum = { version = "0.6", features = ["headers", "macros", "tower-log"] }
axum-flash = "0.6"
axum-sessions = "0.4"
axum-tracing-opentelemetry = "0.10"
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.13"
derive_more = "0.99"
hex = "0.4"
hmac = { version = "0.12", features = ["std"] }
hyper = { version = "0.14", features = ["server"] }
itertools = "0.10"
passwords = "3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "4"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
#tracing-error = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "0.4", features = ["trace"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["serde", "v4"] }
validator = "0.16"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["cookies", "json", "rustls-tls"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
claims = "0.7"
fake = "2.4"
linkify = "0.9"
once_cell = "1"
rand = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
wiremock = "0.5"